Remove `commons-io` dependency and refactor log reading. For not to wait for SNAP to resolve the dependency issue.
The `commons-io` library was removed from `pom.xml`, and the log reading functionality was updated to use `Files.readAllLines` instead of `ReversedLinesFileReader`. This simplifies the codebase and removes the dependency on an outdated library. Additionally, minor code cleanups were performed for improved readability.